<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#002240"
    tools:context="com.g53mdp.wkurniawan07.androidmusicplayer.MainActivity">

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/songList"
            android:layout_above="@+id/controls" />

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/controls_toolbar_min_height"
            android:id="@+id/controls"
            android:layout_alignParentBottom="true" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/button_height"
                android:maxHeight="@dimen/button_height"
                android:paddingStart="@dimen/button_padding"
                android:paddingEnd="@dimen/button_padding"
                android:src="@drawable/unshuffle_"
                android:id="@+id/shuffleButton"
                android:contentDescription="@string/shuffle_button"
                android:layout_toStartOf="@+id/quitButton" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/button_height"
                android:maxHeight="@dimen/button_height"
                android:paddingStart="@dimen/button_padding"
                android:paddingEnd="@dimen/button_padding"
                android:src="@drawable/quit_"
                android:id="@+id/quitButton"
                android:contentDescription="@string/quit_button"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/button_height"
                android:maxHeight="@dimen/button_height"
                android:paddingStart="@dimen/button_padding"
                android:paddingEnd="@dimen/button_padding"
                android:src="@drawable/unloop_"
                android:id="@+id/loopButton"
                android:contentDescription="@string/loop_button"
                android:layout_toEndOf="@+id/quitButton" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/currentSong"
            android:maxHeight="@dimen/button_height"
            android:minHeight="@dimen/button_height"
            android:gravity="center"
            android:layout_below="@+id/shuffleButton"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#00BCC4"
            android:layout_alignParentStart="true" />

        </RelativeLayout>

</RelativeLayout>
